--- a/Code/V3/PocketMage_V3/platformio.ini
+++ b/Code/V3/PocketMage_V3/platformio.ini
@@ -24,11 +24,10 @@ platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
 
-build_flags=    ;-DBOARD_HAS_PSRAM
-                -DARDUINO_USB_MODE=1
+build_flags=    -DARDUINO_USB_MODE=1
                 -DARDUINO_USB_CDC_ON_BOOT=1
-                -DARDUINO_RUNNING_CORE=0
-                -DARDUINO_EVENT_RUNNING_CORE=0
+                -DARDUINO_RUNNING_CORE=1
+                -DARDUINO_EVENT_RUNNING_CORE=1
 
 board_build.partitions = default_16MB.csv
 board_upload.flash_size = 16MB
