--- a/Code/PocketMage_V3/platformio.ini
+++ b/Code/PocketMage_V3/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [platformio]
 default_envs = PM_V3
 src_dir = src
@@ -43,8 +42,7 @@ lib_deps =
     adafruit/RTClib@^2.1.4
     olikraus/U8g2@^2.36.4
     adafruit/Adafruit MPR121@^1.1.3
+    gmarty2000/Buzzer@^1.0.0
     ; Currently using a fork of the library
     ; zinggjm/GxEPD2@^1.6.3
     https://github.com/ashtf8/GxEPD2_Editable_useFastFullUpdate
-    https://github.com/gmarty2000-ARDUINO/arduino-BUZZER.git
-
