Integrate real PocketMage source code with comprehensive compatibility layer
- Added all PocketMage source files to CMakeLists.txt build system
- Created comprehensive compatibility headers for Arduino/ESP32 APIs:
  - Arduino.h, GxEPD2_BW.h, U8g2lib.h, Wire.h, SD_MMC.h
  - Preferences.h, Adafruit_TCA8418.h, Buzzer.h
- Implemented pocketmage_compat.h with String class and hardware mocks
- Updated main.cpp to use real PocketMage drawHome() function
- Added hardware_shim.cpp with full File system and hardware implementations
- Forward declared real PocketMage app handlers and functions
- Ready for integration of authentic PocketMage app behavior and UI

--- a/desktop_emulator/CMakeLists.txt
+++ b/desktop_emulator/CMakeLists.txt
@@ -28,8 +28,20 @@ include_directories(${POCKETMAGE_INCLUDE})
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_TTF_INCLUDE_DIRS})
 
-# PocketMage source files - we'll extract what we need manually
-# set(POCKETMAGE_SOURCES)
+# PocketMage source files (actual app code)
+set(POCKETMAGE_SOURCES
+    ${POCKETMAGE_SRC}/globals.cpp
+    ${POCKETMAGE_SRC}/assets.cpp
+    ${POCKETMAGE_SRC}/HOME.cpp
+    ${POCKETMAGE_SRC}/TXT.cpp
+    ${POCKETMAGE_SRC}/FILEWIZ.cpp
+    ${POCKETMAGE_SRC}/TASKS.cpp
+    ${POCKETMAGE_SRC}/CALENDAR.cpp
+    ${POCKETMAGE_SRC}/settings.cpp
+    ${POCKETMAGE_SRC}/USB.cpp
+    ${POCKETMAGE_SRC}/JOURNAL.cpp
+    ${POCKETMAGE_SRC}/LEXICON.cpp
+)
 
 # Desktop emulator source files
 set(EMULATOR_SOURCES
@@ -41,6 +53,7 @@ set(EMULATOR_SOURCES
 # Create executable
 add_executable(${PROJECT_NAME} 
     ${EMULATOR_SOURCES}
+    ${POCKETMAGE_SOURCES}
 )
 
 # Link libraries
