--- a/desktop_emulator/CMakeLists.txt
+++ b/desktop_emulator/CMakeLists.txt
@@ -22,17 +22,26 @@ set(POCKETMAGE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../Code/PocketMage_V3)
 set(POCKETMAGE_SRC ${POCKETMAGE_ROOT}/src)
 set(POCKETMAGE_INCLUDE ${POCKETMAGE_ROOT}/include)
 
+# Add PocketMage source files (exclude sysFunc.cpp to avoid updateKeypress conflict)
+file(GLOB_RECURSE POCKETMAGE_SOURCES 
+    "${CMAKE_CURRENT_SOURCE_DIR}/../Code/PocketMage_V3/src/*.cpp"
+)
+# Remove problematic files to avoid compilation issues
+list(FILTER POCKETMAGE_SOURCES EXCLUDE REGEX ".*sysFunc\\.cpp$")
+list(FILTER POCKETMAGE_SOURCES EXCLUDE REGEX ".*USB\\.cpp$")
+list(FILTER POCKETMAGE_SOURCES EXCLUDE REGEX ".*OLEDFunc\\.cpp$")
+list(FILTER POCKETMAGE_SOURCES EXCLUDE REGEX ".*einkFunc\\.cpp$")
+
 # Include directories
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${POCKETMAGE_INCLUDE})
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_TTF_INCLUDE_DIRS})
 
-# PocketMage source files (actual app code)
-set(POCKETMAGE_SOURCES
+# PocketMage source files (actual app code) - sysFunc.cpp excluded due to updateKeypress conflict
+set(POCKETMAGE_SOURCES_MANUAL
     ${POCKETMAGE_SRC}/globals.cpp
     ${POCKETMAGE_SRC}/assets.cpp
-    ../Code/PocketMage_V3/src/sysFunc.cpp
     ${POCKETMAGE_SRC}/PocketMageV3.cpp
     # ../Code/PocketMage_V3/src/USB.cpp  # Excluded - requires ESP32-specific headers
     ${POCKETMAGE_SRC}/TXT.cpp
@@ -56,6 +65,7 @@ set(EMULATOR_SOURCES
 add_executable(${PROJECT_NAME} 
     ${EMULATOR_SOURCES}
     ${POCKETMAGE_SOURCES}
+    ${POCKETMAGE_SOURCES_MANUAL}
 )
 
 # Link libraries
