--- a/desktop_emulator/CMakeLists.txt
+++ b/desktop_emulator/CMakeLists.txt
@@ -4,17 +4,41 @@ project(PocketMage_Desktop_Emulator)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find SDL2 and SDL2_ttf
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(SDL2 REQUIRED sdl2)
-pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
+# ---------------------------
+# SDL2 / SDL2_ttf discovery
+# ---------------------------
+set(_sdl_config_ok FALSE)
 
-# Add Homebrew paths for macOS
+# Prefer CMake CONFIG packages on Windows (vcpkg or official SDL2 devel zips)
+if (WIN32)
+  find_package(SDL2 CONFIG QUIET)       # provides SDL2::SDL2 and (usually) SDL2::SDL2main
+  if (TARGET SDL2::SDL2)
+    set(_sdl_config_ok TRUE)
+    find_package(SDL2_ttf CONFIG REQUIRED)  # provides SDL2_ttf::SDL2_ttf
+  endif()
+endif()
+
+# Fallback to pkg-config (macOS/Linux; also works for MSYS2/MinGW on Windows)
+if (NOT _sdl_config_ok)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(SDL2 REQUIRED sdl2)
+  pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
+
+  add_library(SDL2::SDL2 INTERFACE IMPORTED)
+  target_include_directories(SDL2::SDL2 INTERFACE ${SDL2_INCLUDE_DIRS})
+  target_link_libraries(SDL2::SDL2 INTERFACE ${SDL2_LIBRARIES})
+
+  add_library(SDL2_ttf::SDL2_ttf INTERFACE IMPORTED)
+  target_include_directories(SDL2_ttf::SDL2_ttf INTERFACE ${SDL2_TTF_INCLUDE_DIRS})
+  target_link_libraries(SDL2_ttf::SDL2_ttf INTERFACE ${SDL2_TTF_LIBRARIES})
+endif()
+
+# Homebrew helper for macOS (kept from your original setup)
 if(APPLE)
-    execute_process(COMMAND brew --prefix OUTPUT_VARIABLE HOMEBREW_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
-    list(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_PREFIX}")
-    include_directories("${HOMEBREW_PREFIX}/include")
-    link_directories("${HOMEBREW_PREFIX}/lib")
+  execute_process(COMMAND brew --prefix OUTPUT_VARIABLE HOMEBREW_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
+  list(APPEND CMAKE_PREFIX_PATH "${HOMEBREW_PREFIX}")
+  include_directories("${HOMEBREW_PREFIX}/include")
+  link_directories("${HOMEBREW_PREFIX}/lib")
 endif()
 
 # PocketMage source paths
@@ -41,46 +65,61 @@ set(POCKETMAGE_SOURCES_MANUAL
     ${POCKETMAGE_SRC}/BT.cpp
 )
 
-# Include directories
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-include_directories(${POCKETMAGE_INCLUDE})
-include_directories(${SDL2_INCLUDE_DIRS})
-include_directories(${SDL2_TTF_INCLUDE_DIRS})
-
-# Emulator-specific source files
+# ---------------------------
+# Project sources / includes
+# ---------------------------
+# Emulator-specific sources
 set(EMULATOR_SOURCES
-    src/main_new.cpp
-    src/desktop_display_sdl2.cpp
-    src/hardware_shim.cpp
-    src/oled_service.cpp
+  src/main_new.cpp
+  src/desktop_display_sdl2.cpp
+  src/hardware_shim.cpp
+  src/oled_service.cpp
 )
 
-# Create executable
-add_executable(${PROJECT_NAME} 
-    ${EMULATOR_SOURCES}
-    ${POCKETMAGE_SOURCES_MANUAL}
+add_executable(${PROJECT_NAME}
+  ${EMULATOR_SOURCES}
+  ${POCKETMAGE_SOURCES_MANUAL}
 )
 
-# Link libraries
-target_link_libraries(${PROJECT_NAME} 
-    SDL2
-    SDL2_ttf
+target_include_directories(${PROJECT_NAME} PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${POCKETMAGE_INCLUDE}
 )
 
-# Compiler flags
-target_compile_options(${PROJECT_NAME} PRIVATE 
-    ${SDL2_CFLAGS_OTHER}
-    ${SDL2_TTF_CFLAGS_OTHER}
-    -DDESKTOP_EMULATOR
-)
-
-# Compiler-specific options
-if(MSVC)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
+# Definitions & compile options
+target_compile_definitions(${PROJECT_NAME} PRIVATE DESKTOP_EMULATOR)
+if (MSVC)
+  target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS NOMINMAX)
 endif()
 
-# Copy data directory to build directory
+# ---------------------------
+# Link libraries
+# ---------------------------
+set(_sdl_targets SDL2::SDL2 SDL2_ttf::SDL2_ttf)
+if (TARGET SDL2::SDL2main)
+  # Link SDL2main if it's available (fixes WinMain/SDL_main mismatch on Windows)
+  list(INSERT _sdl_targets 0 SDL2::SDL2main)
+endif()
+target_link_libraries(${PROJECT_NAME} PRIVATE ${_sdl_targets})
+
+# ---------------------------
+# Post-build: copy assets & DLLs
+# ---------------------------
+# Copy data directory (if it exists)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory
-    ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:${PROJECT_NAME}>/data
+  COMMAND ${CMAKE_COMMAND} -E copy_directory
+          ${CMAKE_SOURCE_DIR}/data $<TARGET_FILE_DIR:${PROJECT_NAME}>/data
+  VERBATIM
 )
+
+# On Windows shared builds, copy SDL2/SDL2_ttf DLLs next to the .exe
+if (WIN32)
+  foreach(tgt IN ITEMS SDL2::SDL2 SDL2_ttf::SDL2_ttf)
+    if (TARGET ${tgt})
+      add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                $<TARGET_FILE:${tgt}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
+      )
+    endif()
+  endforeach()
+endif()
