--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,5 +1,5 @@
-# This starter workflow is for a CMake project running on multiple platforms.
-# Uses desktop_emulator/build.sh and desktop_emulator/build.bat
+# This workflow builds via desktop_emulator/build.sh and desktop_emulator/build.bat
+# and stores build artifacts under desktop_emulator/build/
 name: CMake on multiple platforms
 
 on:
@@ -19,7 +19,6 @@ permissions:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-
     timeout-minutes: 40
 
     strategy:
@@ -89,7 +88,7 @@ jobs:
             ${{ runner.os }}-cmake-${{ matrix.c_compiler }}-${{ matrix.build_type }}-
             ${{ runner.os }}-cmake-${{ matrix.c_compiler }}-
 
-      # --- Build via scripts --------------------------------------------
+      # --- Build via your scripts --------------------------------------------
 
       - name: Build on POSIX via desktop_emulator/build.sh
         if: runner.os != 'Windows'
@@ -115,7 +114,7 @@ jobs:
           if not exist "%BUILD_DIR%" mkdir "%BUILD_DIR%"
           call desktop_emulator\build.bat
 
-      # --- Tests (ctest if present) ------------------------------------------
+      # --- Tests (ctest if present in desktop_emulator/build/) ----------------
 
       - name: Test (ctest) on POSIX
         if: runner.os != 'Windows'
@@ -146,8 +145,7 @@ jobs:
           name: logs-${{ matrix.os }}-${{ matrix.c_compiler }}-${{ matrix.build_type }}
           if-no-files-found: ignore
           path: |
-            ${{ steps.strings.outputs.build-output-dir }}/**/*.log
-            ${{ steps.strings.outputs.build-output-dir }}/**/LastTest.log
-            **/CMakeFiles/CMakeOutput.log
-            **/CMakeFiles/CMakeError.log
-
+            desktop_emulator/build/**/*.log
+            desktop_emulator/build/**/LastTest.log
+            desktop_emulator/**/CMakeFiles/CMakeOutput.log
+            desktop_emulator/**/CMakeFiles/CMakeError.log
