--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -88,7 +88,7 @@ jobs:
             ${{ runner.os }}-cmake-${{ matrix.c_compiler }}-${{ matrix.build_type }}-
             ${{ runner.os }}-cmake-${{ matrix.c_compiler }}-
 
-      # --- Build via your scripts --------------------------------------------
+      # --- Build via scripts --------------------------------------------
 
       - name: Build on POSIX via desktop_emulator/build.sh
         if: runner.os != 'Windows'
