--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -92,6 +92,7 @@ jobs:
 
       - name: Build on POSIX via desktop_emulator/build.sh
         if: runner.os != 'Windows'
+        working-directory: desktop_emulator   # 👈 run from here
         env:
           BUILD_DIR: ${{ steps.strings.outputs.build-output-dir }}
           CMAKE_BUILD_TYPE: ${{ matrix.build_type }}
@@ -100,10 +101,11 @@ jobs:
         run: |
           set -euxo pipefail
           mkdir -p "$BUILD_DIR"
-          ./desktop_emulator/build.sh
+          ./build.sh
 
       - name: Build on Windows via desktop_emulator/build.bat
         if: runner.os == 'Windows'
+        working-directory: desktop_emulator   # 👈 run from here
         shell: cmd
         env:
           BUILD_DIR: ${{ steps.strings.outputs.build-output-dir }}
@@ -112,7 +114,7 @@ jobs:
           CXX: ${{ matrix.cpp_compiler }}
         run: |
           if not exist "%BUILD_DIR%" mkdir "%BUILD_DIR%"
-          call desktop_emulator\build.bat
+          call build.bat
 
       # --- Tests (ctest if present in desktop_emulator/build/) ----------------
 
