Implement dead key functionality for US Latin keyboard
- Fix character display issue by adding String(char) constructor
- Add dead key processing to HOME.cpp and TXT.cpp for KA_DEAD actions
- Implement composeDeadIfAny() function for accent composition
- Fix fallback behavior to output base character when no accent found
- Manually populate DeadTable with apostrophe dead key combinations
- Initialize keyboard layout during emulator startup
- Support accented characters: á, é, í, ó, ú and additional chars like ć, ń, ś, ź
- Dead keys now work in both HOME command line and TXT editor

--- a/Code/PocketMage_V3/platformio.ini
+++ b/Code/PocketMage_V3/platformio.ini
@@ -41,8 +41,10 @@ lib_deps =
     adafruit/Adafruit TCA8418@^1.0.2
     adafruit/RTClib@^2.1.4
     olikraus/U8g2@^2.36.4
+    olikraus/U8g2_for_Adafruit_GFX@^1.8.0
     adafruit/Adafruit MPR121@^1.1.3
     gmarty2000/Buzzer@^1.0.0
+    bblanchon/ArduinoJson@^6.21.3
     ; Currently using a fork of the library
     ; zinggjm/GxEPD2@^1.6.3
     https://github.com/ashtf8/GxEPD2_Editable_useFastFullUpdate
