Optimize periodic table rendering and fix Pokemon sprite inversion
- Implement off-screen canvas rendering system for periodic table
- Add partial update system for cursor movement to reduce GPU load
- Fix Metal GPU crashes by eliminating excessive full redraws
- Initialize cursor to Hydrogen by default for proper highlighting
- Fix inverted Pokemon sprite bitmaps in both 32x32 and 64x64 formats
- Correct 1bpp to 4bpp conversion logic (0 bit = black, 1 bit = white)
- Add canvas cleanup functions and memory management
- Maintain stable e-ink display performance

--- a/desktop_emulator/CMakeLists.txt
+++ b/desktop_emulator/CMakeLists.txt
@@ -63,6 +63,8 @@ set(POCKETMAGE_SOURCES_MANUAL
     ${POCKETMAGE_SRC}/POKEDEX.cpp
     ${POCKETMAGE_SRC}/PERIODIC.cpp
     ${POCKETMAGE_SRC}/BT.cpp
+    ${POCKETMAGE_SRC}/PokedexUI.cpp
+    ${POCKETMAGE_SRC}/PocketMageGraphics.cpp
 )
 
 # ---------------------------
